# YOWOF

./: .pdm-python  pyproject.toml
src/: demo.py  eval.py  test.py  test_video_ava.py  train.py  train_custom.sh
src/yowof.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/yowof/config/: __init__.py  dataset_config.py  yowof_config.py
src/yowof/dataset/: custom.py
src/yowof/evaluator/: ava_evaluator.py  cal_video_mAP.py  custom_evaluator.py  ucf_jhmdb_evaluator.py  utils.py
src/yowof/models/detector/yowof/: loss.py  matcher.py  yowof.py
src/yowof/utils/: distributed_utils.py  misc.py
