[project]
name = "yowof"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Jianhua Yang"},
    {name = "heonjin"},
]
dependencies = [
    "torch",
    "torchvision",
    "opencv-python",
    "thop",
    "scipy",
    "matplotlib",
    "numpy",
    "imageio>=2.36.0",
    "torchmetrics>=1.5.1",
    "pycocotools>=2.0.8",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true
